# lab05

./: .travis.yml  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: print.hpp
sources/: print.cpp
tests/: test1.cpp
